# django-reporting-with-raw-sql

./: .gitignore  .license-header.txt  .pre-commit-config.yaml  Django reporting with raw SQL.odp  README.md  compose.yaml  manage.py  pyproject.toml
core/: admin.py  apps.py  models.py
core/management/commands/: make_demo.py  make_demo_admin.py
core/migrations/: 0001_initial.py
minitrack/: asgi.py  settings.py  urls.py  wsgi.py
report/: apps.py  reports.py  sql_tools.py  views.py
report/ddls/: create_schema.sql  create_user_if_not_exists.sql  create_view_issue.sql  create_view_issue_kind_missing.sql  create_view_issue_kind_multiples.sql  create_view_issue_kind_unique.sql  create_view_issue_labels.sql  create_view_user.sql  drop_views.sql  grant_user_access_to_reports.sql  select_issue_kind_minimal.sql  select_issue_kind_windowing.sql
report/management/commands/: clear_reports.py  make_report_user.py  make_reports.py
report/migrations/: __init__.py
report/templates/report/: issue_list.html
tests/: test_query.py
